--- a/EmployeeAttendanceSystem/Views/Attendance/Index.cshtml
+++ b/EmployeeAttendanceSystem/Views/Attendance/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Today's Attendance";
 }
 
-<h1>Today's Attendance</h1>
+@*<h1>Today's Attendance</h1>*@
 
 <p>
-    <a asp-action="Create">Today's Attendance</a>
+    <a asp-action="Create">Add Manual Attendance</a>
 </p>
 <table class="table">
     <thead>
@@ -21,7 +21,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Status)
             </th>
-            <th></th>
+            @*<th></th>*@
         </tr>
     </thead>
     <tbody>
@@ -36,11 +36,11 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Status)
             </td>
-            <td>
+            @*<td>
                 <a asp-action="Edit" asp-route-id="@item.AttendanceId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.AttendanceId">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.AttendanceId">Delete</a>
-            </td>
+            </td>*@
         </tr>
 }
     </tbody>
